@@ -1,5 +1,10 @@
 #!/usr/bin/perl -w
 
+# Needed to get PERL5LIB under taint mode.
+# See - http://objectmix.com/perl/78372-taint-breaking-perl5lib-over-zealous-cgi.html
+use Config;
+use lib map { /(.*)/ } $ENV{PERL5LIB} =~ /([^$Config{path_sep}]+)/g;
+
 use strict;
 
 use Test::More tests => 1;
